fixed history button and spacing issue

--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -85,4 +85,5 @@ img {
     margin-top: 10px;
     border-top: 1px solid black;
     width: auto;
+    margin-bottom: 10px;
   }
